# lucid-minimal-backend

./: .env.sample  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: crud.py  main.py  models.py  schema.py
app/api/: deps.py
app/api/routes/: __init__.py  auth.py  posts.py
app/core/: config.py  database.py  security.py
